<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!--  비만도 계산기에 필요한 위젯 추가...  -->
    <!--  각 위젯에 들어갈 색상과 문자 따로 생성하여 사용
            res - values - colors.xml / strings.xml -->
    <!--  테마 설정 : 액션바 삭제, 상태바 색상 변경
            res - themes - themes.xml  -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sub_title"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/custom_black"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/height"
        android:textAlignment="center"
        android:textColor="@color/custom_black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="키를 입력하세요"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textColor="@color/custom_black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="몸무게를 입력하세요"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/custom_orange"
        android:text="@string/check"
        android:textSize="18sp" />

</LinearLayout>